<resources>
    <string name="app_name">SoccerMatch</string>
    <string name="detail_info_logo">Logo</string>
    <string name="detail_info_banner">Banner</string>
    <string name="detail_info_trophy">Trophy</string>
    <string name="detail_goal">Goal</string>
    <string name="detail_red_card">Red Card</string>
    <string name="detail_yellow_card">Yellow Card</string>
    <string name="detail_goal_keeper">Goal Keeper</string>
    <string name="detail_forward">Forward</string>
    <string name="detail_formation">Formation</string>
    <string name="info_title">title</string>
    <string name="info_desc">some text</string>
    <string name="info_since">since</string>

    <string-array name="league_id">
        <item>4328</item>
        <item>4334</item>
        <item>4331</item>
        <item>4332</item>
        <item>4335</item>
        <item>4346</item>
        <item>4344</item>
        <item>4356</item>
        <item>4330</item>
        <item>4396</item>
    </string-array>

    <array name="league_badge">
        <item>@drawable/english_premier_league</item>
        <item>@drawable/french_ligue_1</item>
        <item>@drawable/german_bundesliga</item>
        <item>@drawable/italian_serie_a</item>
        <item>@drawable/spanish_la_liga</item>
        <item>@drawable/american_mayor_league</item>
        <item>@drawable/portugeuese_premiera_liga</item>
        <item>@drawable/australian_a_league</item>
        <item>@drawable/scotish_premier_league</item>
        <item>@drawable/english_league_1</item>
    </array>

    <string-array name="league_name">
        <item>English Premier League</item>
        <item>French Ligue 1</item>
        <item>German Bundesliga</item>
        <item>Italian Serie A</item>
        <item>Spanish La Liga</item>
        <item>American Mayor League</item>
        <item>Protugeuese Premiera Liga</item>
        <item>Australian A League</item>
        <item>Scotish Premier League</item>
        <item>English League 1</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="leagues">leagues</string>
    <string name="favorites">favorites</string>
</resources>
