<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.league.DetailLeagueActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        >

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/detailCollapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextAppearance="@android:color/transparent"
            app:expandedTitleGravity="top"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="?attr/actionBarSize"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.5">

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="10dp"
                    android:elevation="5dp"
                    app:layout_collapseMode="parallax"
                    app:layout_collapseParallaxMultiplier="0.5"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:background="@color/colorPrimary"
                        app:layout_collapseMode="parallax"
                        app:layout_collapseParallaxMultiplier="0.5"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/detail_league_img_banner"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            app:layout_constraintBottom_toTopOf="@+id/textView5"
                            app:layout_constraintEnd_toStartOf="@+id/detail_league_img_trophy"
                            app:layout_constraintStart_toEndOf="@+id/detail_league_img_logo"
                            app:srcCompat="@drawable/ic_broken_image_black" />

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:text="@string/detail_info_banner"
                            android:textColor="@android:color/white"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="@+id/detail_league_img_banner"
                            app:layout_constraintStart_toStartOf="@+id/detail_league_img_banner" />

                        <TextView
                            android:id="@+id/detail_league_tv_since"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp"
                            android:text="@string/info_since"
                            android:textColor="@android:color/white"
                            app:layout_constraintStart_toEndOf="@+id/detail_league_badge"
                            app:layout_constraintTop_toBottomOf="@+id/detail_league_tv_description" />

                        <TextView
                            android:id="@+id/detail_tv_league_name"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="32dp"
                            android:layout_marginEnd="8dp"
                            android:text="@string/info_title"
                            android:textColor="@android:color/white"
                            android:textSize="18sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/detail_league_badge"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:text="Manchester United" />

                        <TextView
                            android:id="@+id/detail_league_tv_description"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp"
                            android:ellipsize="end"
                            android:maxLines="7"
                            android:text="@string/info_desc"
                            android:textAlignment="viewStart"
                            android:textColor="@android:color/white"
                            android:textSize="12sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/detail_league_badge"
                            app:layout_constraintTop_toBottomOf="@+id/detail_tv_league_name"
                            tools:text="he Premier League (often referred to as the English Premier League (EPL) outside England), is the top level of the English football league system. Contested by 20 clubs, it operates on a system of promotion" />

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:text="@string/detail_info_logo"
                            android:textColor="@android:color/white"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="@+id/detail_league_img_logo"
                            app:layout_constraintStart_toStartOf="@+id/detail_league_img_logo" />

                        <ImageView
                            android:transitionName="sharedName"
                            android:id="@+id/detail_league_badge"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="48dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/ic_broken_image_black" />

                        <ImageView
                            android:id="@+id/detail_league_img_trophy"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginEnd="32dp"
                            app:layout_constraintBottom_toTopOf="@+id/textView6"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:srcCompat="@drawable/ic_broken_image_black" />

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:text="@string/detail_info_trophy"
                            android:textColor="@android:color/white"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="@+id/detail_league_img_trophy"
                            app:layout_constraintStart_toStartOf="@+id/detail_league_img_trophy" />

                        <ImageView

                            android:id="@+id/detail_league_img_logo"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginStart="32dp"
                            app:layout_constraintBottom_toTopOf="@+id/textView4"
                            app:layout_constraintStart_toStartOf="parent"
                            app:srcCompat="@drawable/ic_broken_image_black" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/league_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/detail_league_tablayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:tabGravity="fill"
            app:tabIndicatorColor="#ffffff"
            app:tabMaxWidth="0dp"
            app:tabTextColor="#ffffff">

        </com.google.android.material.tabs.TabLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <ProgressBar
        android:id="@+id/detail_league_progrssbar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:visibility="invisible" />

    <androidx.viewpager.widget.ViewPager
        android:layout_marginTop="5dp"
        android:id="@+id/detail_league_viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

    </androidx.viewpager.widget.ViewPager>

</androidx.coordinatorlayout.widget.CoordinatorLayout>